traduzido package.html de domain

--- a/src/main/java/org/eclipse/cargotracker/domain/package.html
+++ b/src/main/java/org/eclipse/cargotracker/domain/package.html
@@ -1,13 +1,13 @@
 <html>
 <body>
-<p>The domain model, services and repository interfaces. This is
-    the central part of the application. The ubiquitous language is used
-    in classes, interfaces and method signatures, and every concept in
-    here is familiar to a expert in the cargo shipping domain.</p>
-<p>There is no infrastructure or user interface related code here,
-    except for things like transactional, validation and security metadata
-    which is likely to be relevant to a domain expert ("Either all of foo
+<p> O modelo de domínio, serviços e interfaces de repositório. Isto é
+    a parte central da aplicação. A linguagem ubíqua é utilizada
+    em classes, interfaces e assinaturas de métodos, e todos os conceitos 
+    aqui são familiares a um especialista no domínio do transporte de carga.</p>
+<p> Não existe aqui nenhum código relacionado à infra-estrutura ou à interface do usuário,
+    exceto por coisas como metadados transacionais, de validação e de segurança
+    que provavelmente será relevante para um especialista de domínio (Either all of foo
     succeeds or none of it does", "In order to do bar you need to be a
-    Supervisor", and so on).</p>
+    Supervisor", e assim por diante).</p>
 </body>
 </html>
