Tradução de package.html de application/

--- a/src/main/java/org/eclipse/cargotracker/application/package.html
+++ b/src/main/java/org/eclipse/cargotracker/application/package.html
@@ -1,12 +1,11 @@
 <html>
 <body>
-<p>This is the application layer: code that's needed for the
-    application to performs its tasks. It defines, or is defined by, use
-    cases.</p>
-<p>It is thin in terms of knowledge of domain business logic,
-    although it may be large in terms of lines of code. It coordinates the
-    domain layer objects to perform the actual tasks.</p>
-<p>This layer is suitable for spanning transactions, security
-    checks and high-level logging.</p>
+<p>Esta é a Application Layer: código que é necessário para a
+    aplicação desempenhar suas tarefas. Ela define, ou é definida pelos casos de uso (ver Caso de Uso em Arquitetura Limpa).</p>
+<p>Essa camada é fina em termos de conhecimento de lógica de negócio do domínio,
+    embora possa ser grande em termos de linhas de código. Ela coordena os
+    objetos da camada de domínio para executar as tarefas reais.</p>
+<p>Esta camada é adequada para abrigar transações, checagens de segurança
+     e logging de alto nível.</p>
 </body>
 </html>
