--- a/src/main/java/org/eclipse/cargotracker/application/internal/package.html
+++ b/src/main/java/org/eclipse/cargotracker/application/internal/package.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<p>Implementation of the application layer.</p>
+<p>Implementação da camada de aplicação (application layer).</p>
 </body>
 </html>
