--- a/src/main/java/org/eclipse/cargotracker/domain/model/package.html
+++ b/src/main/java/org/eclipse/cargotracker/domain/model/package.html
@@ -1,7 +1,7 @@
 <html>
 <body>
-<p>The domain model. This is the heart of the application. Each
-    aggregate is contained in its own sub-package, along with the
-    repository interface, factories and exceptions where applicable.</p>
+<p>O modelo de domínio. Este é o coração da aplicação. Cada 
+    agregado está contido em seu próprio sub-pacote, juntamente com a
+    interface para o repositório, fábricas e exceções, quando aplicável.</p>
 </body>
 </html>
